--- a/home.html
+++ b/home.html
@@ -73,7 +73,7 @@
 
         function logout() {
             localStorage.removeItem('loggedInUser');
-            window.location.href = "login.html"
+            window.location.href = "index.html"
         }
 
         loadImages();
