--- a/upload.html
+++ b/upload.html
@@ -62,7 +62,7 @@
 
     function logout() {
         localStorage.removeItem('loggedInUser');
-        window.location.href = "login.html";
+        window.location.href = "index.html";
     }
 </script>
 
