--- a/upload.html
+++ b/upload.html
@@ -33,12 +33,13 @@
 
 <script>
     const firebaseConfig = {
-        apiKey: "YOUR_API_KEY",
-        authDomain: "YOUR_AUTH_DOMAIN",
-        projectId: "YOUR_PROJECT_ID",
-        storageBucket: "YOUR_STORAGE_BUCKET",
-        messagingSenderId: "YOUR_MESSAGING_SENDER_ID",
-        appId: "YOUR_APP_ID"
+       apiKey: "AIzaSyBfcZnhs-3OCeE5jsxaPR76E_wCKw87bPA",
+  authDomain: "anchor-upload.firebaseapp.com",
+  projectId: "anchor-upload",
+  storageBucket: "anchor-upload.appspot.com",
+  messagingSenderId: "701384851748",
+  appId: "1:701384851748:web:22f331245f29fa68c873b1",
+  measurementId: "G-2RJVS20D7E"
     };
 
     // Initialize Firebase
